# exp-notebook-1

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/generic/: cxx.cmake  sources.cmake  uwebsockets.cmake  vcpkg.cmake  vcpkg_pre.cmake
include/server/: uwebsockets.h
script/lab/: FileServe.ipynb  FileServe.py
setup/: requirements.py
src/server/: CMakeLists.txt  server.cpp
